mule-user-guide/v/3.6/global-settings-configuration-reference.adoc
= Global Settings Configuration Reference
:keywords: esb, configure, finetune, global, global settings

This page provides details on the global settings you configure at the root level of a Mule configuration. For more information on configuration, see link:/documentation/display/current/About+Mule+Configuration[About Mule Configuration]. For information on threading profiles, see link:/documentation/display/current/Tuning+Performance[Tuning Performance].

== Configuration

Specifies defaults and general settings for the Mule instance.

=== Attributes of <configuration...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
|===
|Name |Type |Required |Default |Description
|defaultResponseTimeout |string |no |10000 |The default period (ms) to wait for a synchronous response.
|defaultTransactionTimeout |string |no |30000 |The default timeout (ms) for transactions. This can also be configured on transactions, in which case the transaction configuration is used instead of this default.
|defaultExceptionStrategy-ref |string |no |  |The default exception strategy for every flow / service. This must be a reference to a global exception strategy.
|shutdownTimeout |integer |no |5000 |(As of Mule 2.2.2) The time in milliseconds to wait for any in-progress messages to finish processing before Mule shuts down. After this threshold has been reached, Mule starts interrupting threads, and messages can be lost. If you have a very large number of services in the same Mule instance, if you have components that take more than a couple seconds to process, or if you are using large payloads and/or slower transports, you should increase this value to allow more time for graceful shutdown. The value you specify is applied to services and separately to dispatchers, so the default value of 5000 milliseconds specifies that Mule has ten seconds to process and dispatch messages gracefully after shutdown is initiated.
|useExtendedTransformations |boolean |no |true |Backwards Compatabilty Flag: Used to disable the new extended transformation support introduced in Mule 3.3 including enforcement of transformations, implicit transformations and no direct transformer lookup.
|flowEndingWithOneWayEndpointReturnsNull |boolean |no |false |Backwards Compatabilty Flag: Used to revert to Mule 3.2 behaviour of one-way outbound endpoints when they are the last element inside a request-response flow. When true the value returned by the endpoint will be null, otherwise will be an echo of the received event.
|enricherPropagatesSessionVariableChanges |boolean |no |false |Backwards Compatabilty Flag: Used to revert to Mule 3.1/3.2 behaviour of the message enricher so that session variables added or modified within an enricher are propagated up into the flow where the enricher is used.
|===

=== Child Elements of <configuration...>

[width="100%",cols="34%,33%,33%",options="header"]
|===
|Name |Cardinality |Description
|default-threading-profile |0..1 |The default threading profile, used by components and by endpoints for dispatching and receiving if no more specific configuration is given.
|default-dispatcher-threading-profile |0..1 |The default dispatching threading profile, which modifies the default-threading-profile values and is used by endpoints for dispatching messages. This can also be configured on connectors, in which case the connector configuration is used instead of this default.
|default-receiver-threading-profile |0..1 |The default receiving threading profile, which modifies the default-threading-profile values and is used by endpoints for receiving messages. This can also be configured on connectors, in which case the connector configuration is used instead of this default.
|default-service-threading-profile |0..1 |The default service threading profile, which modifies the default-threading-profile and is used by services for processing messages. This can also be configured on models or services, in which case these configurations will be used instead of this default.
|abstract-reconnection-strategy |0..1 |The default reconnection strategy, used by connectors and endpoints. This can also be configured on connectors, in which case the connector configuration is used instead of this default. A placeholder for a reconnection strategy element. Reconnection strategies define how Mule should attempt to handle a connection failure.
|expression-language |0..1 |Configuration of Mule Expression Language
|abstract-configuration-extension |0..* |Mule application configuration extensions. Extensions can be defined as child of the configuration elements and then accessed by each module that defines it. A placeholder for arbitrary extensions as children of the 'configuration' element. Other transports and modules can extend this if they need to add elements to the configuration.
|===
